--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 <meta http-equiv="refresh" content="1;url=https://docs.google.com/spreadsheets/d/e/2PACX-1vRdDSAlo6je0azTyCF3C6yajL6UtN0jK10wa_HKAVWwS4v4NZ4oo_9nGdC_JA-V-0ULJb6rwMYz6YcE/pubhtml?gid=0&single=true" />
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="7; url='https://docs.google.com/spreadsheets/d/e/2PACX-1vRdDSAlo6je0azTyCF3C6yajL6UtN0jK10wa_HKAVWwS4v4NZ4oo_9nGdC_JA-V-0ULJb6rwMYz6YcE/pubhtml?gid=0&single=true'" />
+  </head>
+  <body>
+    <p>You should be redirected automatically. If not, please follow <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vRdDSAlo6je0azTyCF3C6yajL6UtN0jK10wa_HKAVWwS4v4NZ4oo_9nGdC_JA-V-0ULJb6rwMYz6YcE/pubhtml?gid=0&single=true">this link</a>.</p>
+  </body>
+</html>
